ftpd: delete dead code

Delete code killed by SVN r13139 in 1996.  Little chance that it would
still compile today.

PR:		257317
Reported by:	Alan Shearer <sakison@gmail.com>
Sponsored by:	Axcient

(cherry picked from commit 674400eb20b65369a88b1cb778d729bc297832c9)